# tempo-agent-treaty

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
backend/: app.py  config.py
backend/agent/: agent_loop.py  market_data.py  policy_engine.py  types.py
backend/routes/: agent.py  negotiation.py  settlement.py  trades.py
backend/settlement/: bridge.py  mpp_bridge.py  zkp_verifier.py
backend/tests/: test_agent.py  test_api.py  test_config.py  test_mpp_real.py  test_settlement.py
docs/analysis/: looper_combined_20260311_213640.md
docs/analysis/gemini/gemini_loop_20260311_213640/: FINAL_REPORT.md  R1_ANALYST.md  R2_ADVERSARY.md  R3_INTEGRATOR.md  R4_DECIDER.md
docs/analysis/gemini_loop_20260310_181826/: FINAL_REPORT.md  R1_ANALYST.md  R2_ADVERSARY.md  R3_INTEGRATOR.md  R4_DECIDER.md
docs/analysis/gemini_loop_20260310_203915/: FINAL_REPORT.md  R1_ANALYST.md  R2_ADVERSARY.md  R3_INTEGRATOR.md  R4_DECIDER.md
docs/analysis/grok/grok_loop_20260311_213548/: FINAL_REPORT.md  R1_ANALYST.md  R2_ADVERSARY.md  R3_INTEGRATOR.md  R4_DECIDER.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  vellum.d.ts
frontend/src/config/: api-config.ts  otc-entity-config.ts
frontend/src/lib/: vellum-core.tsx
frontend/src/pages/: AgentControlPage.tsx  DashboardPage.tsx  DemoPage.tsx  TradePage.tsx
