[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempo-agentic-negotiator"
version = "0.1.0"
description = "Agentic OTC block trading with Vellum negotiation engine + Tempo settlement"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "vellum @ file:./vellum",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]
